fix layout issues

--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -4,10 +4,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  // height: calc(100svh - var(--nav-height));
   height: 100svh;
 
-  padding-top: var(--nav-height);
+  padding-top: 0;
+  padding-bottom: 0;
 
   @media (min-width: 900px) {
     height: 100vh;
