--- a/src/components/Projects/ProjectCard/ProjectCard.module.scss
+++ b/src/components/Projects/ProjectCard/ProjectCard.module.scss
@@ -54,8 +54,7 @@
 }
 
 .img {
-  min-width: 85%;
-  max-width: 85%;
+  min-width: 100%;
   scroll-snap-align: start;
   scroll-snap-stop: always;
 
