--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -35,10 +35,12 @@ h2 {
 
 h2 {
   font-family: "IBM Plex Mono", monospace;
+  font-size: 2rem;
   font-weight: 500;
 }
 
 h3 {
+  font-size: 1.3rem;
   font-weight: 500;
 
   &.dark {
